add products and productDetails
