# back-furniture/src/models/user.js
@@ -8,7 +8,6 @@ const userSchema = new mongoose.Schema({
   username: {type: String, required: true},
   email: {type: String, required: true},
   password:{type: String, required: true},
-  confirmPassword: {type: String, required: true},
   mobile: {type: String, required: true},
   dataOfBirth: {type: String, required: true},
   gender: {type: String, required: true},
